--- a/GeeksForGeek/GeeksForGeek.csproj
+++ b/GeeksForGeek/GeeksForGeek.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Tree\PrintLeftViewTree.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tree\PrintTopViewTree.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
